--- a/SabeNaoSabe.RazorClassLibrary/Component/AddButton.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/AddButton.razor
@@ -1,15 +1,14 @@
 ﻿<div class="container">
     @if (Visible)
     {
+        <h4>Questionário - Lista</h4>
         <br />
         <div>
-            <button class="btn btn-primary" @onclick="CreateUpdateQuestionario">Add</button>
+            <button class="btn btn-primary" @onclick="CreateUpdateQuestionario">Adicionar</button>
         </div>
         <br />
     }
 </div>
-
-
 
 
 @code {
