--- a/SabeNaoSabe.RazorClassLibrary/Component/Confirm.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/Confirm.razor
@@ -4,13 +4,13 @@
     @if (Visible)
     {
         <div class="confirmation-modal">
-            <h4>Deletar - Confirmação</h4>
+            <h4>Questionário - Deletar -> Confirmação</h4>
             <p class="text-danger">Voce tem certeza que deseja deletar?</p>
             <div class="form-group">
-                <label form="name"><b>Name: </b>@questionarioModel.Name</label>
+                <label form="name"><b>Nome: </b>@questionarioModel.Name</label>
             </div>
             <div class="form-group">
-                <label form="description"><b>Description: </b>@questionarioModel.Description</label>
+                <label form="description"><b>Descrição: </b>@questionarioModel.Description</label>
             </div>
             <br /><br />
             <div>
