--- a/SabeNaoSabe.WASM/Pages/Index.razor
+++ b/SabeNaoSabe.WASM/Pages/Index.razor
@@ -1,10 +1,7 @@
 ﻿@page "/"
 @using SabeNaoSabe.RazorClassLibrary.Component
-
-<h3>Questionario</h3>
-
+<h6>Sabe Não Sabe</h6>
 <QuestionarioComponent baseUrl="@_baseUrl"></QuestionarioComponent>
-
 
 @code {
     int i = 0;
